[package]
name = "claude-breakout"
version = "0.2.0"
edition = "2021"
description = "A terminal breakout game to play while waiting for Claude Code"
license = "MIT"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
rand = "0.8"
signal-hook = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }

[profile.release]
strip = true
lto = true
